# magro

./: .gitlab-ci.yml  Cargo.toml  README.md
magro/: CHANGELOG.md  Cargo.toml
magro-cli/: CHANGELOG.md  Cargo.toml
magro-cli/doc/: rationale.md
magro-cli/src/: cli_opt.rs  clone.rs  collection.rs  list.rs  main.rs  refresh.rs
magro/src/: cache.rs  collection.rs  config.rs  context.rs  discovery.rs  lib.rs  lock_fs.rs  repository.rs  vcs.rs
magro/src/collection/: collections.rs  name.rs
magro/src/config/: collection.rs  load.rs  main.rs
magro/src/vcs/: git.rs
