[package]
name = "magro"
version = "0.0.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "MAnage Git RepOsitories"
repository = "https://gitlab.com/lo48576/magro"
keywords = ["git"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1.0.20"

[badges]
maintenance = { status = "experimental" }
gitlab = { repository = "lo48576/magro", branch = "master" }
