[package]
name = "magro"
version = "0.0.2"
authors = ["YOSHIOKA Takuma <nop_thread@nops.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "MAnage Git RepOsitories"
repository = "https://gitlab.com/nop_thread/magro"
keywords = ["git"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.32"
directories = "4.0.1"
fd-lock = "3.0.5"
git2 = "0.14.4"
log = "0.4"
once_cell = "1.4"
serde = { version = "1.0.115", features = ["derive"] }
thiserror = "1.0.20"
toml = "0.5.6"
walkdir = "2.2.2"

[dev-dependencies]
serde_test = "1.0.115"

[badges]
maintenance = { status = "experimental" }
gitlab = { repository = "nop_thread/magro", branch = "master" }
